--- a/EarlyDeliverable/early_deliverable.bib
+++ b/EarlyDeliverable/early_deliverable.bib
@@ -16,14 +16,13 @@ month = {mar},
 pages = {265–294},
 numpages = {30},
 keywords = {interpreter, byte code, stack architecture, generator, superinstruction, virtual machine}
-}
+},
 @book{Pierce:SF1,
-author       =   {Benjamin C. Pierce and Arthur Azevedo de Amorim and Chris Casinghino and Marco Gaboardi and Michael Greenberg and Cătălin Hriţcu and Vilhelm Sjöberg and Brent Yorgey},
-editor       =   {Benjamin C. Pierce},
-title        =   "Logical Foundations",
-series       =   "Software Foundations",
-volume       =   "1",
-year         =   "2023",
-publisher    =   "Electronic textbook",
-note         =   {Version 6.3, \URL{http://softwarefoundations.cis.upenn.edu}}
+author = {Benjamin C. Pierce and Arthur Azevedo de Amorim and Chris Casinghino and Marco Gaboardi and Michael Greenberg and Cătălin Hriţcu and Vilhelm Sjöberg and Brent Yorgey},
+editor = {Benjamin C. Pierce},
+title = {"Logical Foundations"},
+series = {"Software Foundations"},
+volume = {"1"},
+year = {"2023"},
+publisher = {"Electronic textbook"},
 }
