Update: description of the problem

--- a/dissertation/dissertation.bib
+++ b/dissertation/dissertation.bib
@@ -1,3 +1,12 @@
+@article{structure_and_performance,
+author = {Ertl, M. and Gregg, David},
+year = {2003},
+month = {11},
+pages = {},
+title = {The Structure and Performance of Efficient Interpreters.},
+volume = {5},
+journal = {J. Instruction-Level Parallelism}
+}
 @article{vmgen,
 author = {Ertl, M. Anton and Gregg, David and Krall, Andreas and Paysan, Bernd},
 title = {Vmgen: A Generator of Efficient Virtual Machine Interpreters},
