--- a/dissertation/dissertation.bib
+++ b/dissertation/dissertation.bib
@@ -26,3 +26,12 @@ pages = {265–294},
 numpages = {30},
 keywords = {interpreter, byte code, stack architecture, generator, superinstruction, virtual machine}
 }
+@book{Pierce:SF1,
+author = {Benjamin C. Pierce and Arthur Azevedo de Amorim and Chris Casinghino and Marco Gaboardi and Michael Greenberg and Cătălin Hriţcu and Vilhelm Sjöberg and Brent Yorgey},
+editor = {Benjamin C. Pierce},
+title = {"Logical Foundations"},
+series = {"Software Foundations"},
+volume = {"1"},
+year = {"2023"},
+publisher = {"Electronic textbook"},
+}
